crates/connectors/ndc-postgres/tests/snapshots/query_tests__basic__select_5.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Facelift"
      },
      {
        "Title": "Balls to the Wall"
      },
      {
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
