crates/connectors/ndc-postgres/tests/snapshots/query_tests__basic__select_by_pk.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Balls to the Wall"
      }
    ]
  }
]
